<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_event_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/dialogNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_name" />

        <Button
            android:id="@+id/dialogHeure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_choose_time"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/dialogLieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_location"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color"
            android:layout_marginTop="15dp" />

        <RadioGroup
            android:id="@+id/radioGroupColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioRouge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />

            <RadioButton
                android:id="@+id/radioBleu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue" />

            <RadioButton
                android:id="@+id/radioVert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green" />
        </RadioGroup>

    </LinearLayout>
</ScrollView>