<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerBulle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_marginBottom="10dp"
    android:background="#FF0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemNom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preview_event_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemHeure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_event_time"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/itemLieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/preview_event_location"
        android:textColor="#E0E0E0"
        android:textSize="14sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"/>

</LinearLayout>